[gd_scene load_steps=9 format=3 uid="uid://c1tqw0hrlac5g"]

[ext_resource type="Theme" uid="uid://dhvsei0a7jp3j" path="res://GlobalTheme.tres" id="1_cny2t"]
[ext_resource type="Script" uid="uid://3nlu8vj8im1i" path="res://Scenes/PauseMenu/pause_menu.gd" id="2_hi1ku"]
[ext_resource type="FontFile" uid="uid://d05yajp3iubii" path="res://fonts/SpaceGrotesk-Bold.ttf" id="4_r07j0"]

[sub_resource type="Animation" id="Animation_rhvpn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CardControl:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CardControl:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shadow:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_24hy8"]
resource_name = "start"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CardControl:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -1080)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("CardControl:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shadow:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pa7jw"]
_data = {
&"RESET": SubResource("Animation_rhvpn"),
&"start": SubResource("Animation_24hy8")
}

[sub_resource type="InputEventAction" id="InputEventAction_dwmcf"]
action = &"ui_accept"

[sub_resource type="Shortcut" id="Shortcut_ui17c"]
events = [SubResource("InputEventAction_dwmcf")]

[node name="PauseMenu" type="Control"]
process_mode = 3
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_cny2t")
script = ExtResource("2_hi1ku")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_pa7jw")
}

[node name="Shadow" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0, 0, 0, 0.752941)

[node name="CardControl" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Card" type="TextureRect" parent="CardControl"]
layout_mode = 0
offset_left = 131.0
offset_top = 109.0
offset_right = 1780.0
offset_bottom = 973.0
expand_mode = 1
stretch_mode = 5

[node name="Title" type="Label" parent="CardControl/Card"]
modulate = Color(0.217701, 0.217701, 0.217701, 1)
layout_mode = 0
offset_left = 181.0
offset_right = 1480.0
offset_bottom = 103.0
theme = ExtResource("1_cny2t")
theme_override_colors/font_color = Color(18.892157, 18.892157, 18.892157, 1)
theme_override_fonts/font = ExtResource("4_r07j0")
theme_override_font_sizes/font_size = 80
text = "NAZWA GRY"
horizontal_alignment = 1

[node name="ExtraText" type="Label" parent="CardControl/Card"]
layout_mode = 0
offset_left = 1173.0
offset_top = 100.0
offset_right = 1541.0
offset_bottom = 206.0
theme = ExtResource("1_cny2t")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 48
text = "Control Scheme"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="CardControl/Card"]
layout_mode = 0
offset_left = 200.0
offset_top = 100.0
offset_right = 566.0
offset_bottom = 196.0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
shortcut = SubResource("Shortcut_ui17c")
shortcut_in_tooltip = false
text = "Resume
"

[node name="MainMenuButton" type="Button" parent="CardControl/Card"]
layout_mode = 0
offset_left = 200.0
offset_top = 220.0
offset_right = 566.0
offset_bottom = 316.0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
shortcut = SubResource("Shortcut_ui17c")
shortcut_in_tooltip = false
text = "Main Menu
"

[node name="ColorRect" type="ColorRect" parent="CardControl/Card"]
layout_mode = 0
offset_left = 1183.0
offset_top = 163.0
offset_right = 1533.0
offset_bottom = 796.0
color = Color(0.17641911, 0.17641908, 0.17641908, 1)

[node name="Label" type="Label" parent="CardControl/Card/ColorRect"]
layout_mode = 0
offset_right = 350.0
offset_bottom = 42.0
theme_override_colors/font_color = Color(0.78775924, 0.78775924, 0.78775924, 1)
text = "Controls go here"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="CardControl/Card/ResumeButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CardControl/Card/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="CardControl/Card/MainMenuButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="CardControl/Card/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
